--- a/src/styles/ThemeToggle.css
+++ b/src/styles/ThemeToggle.css
@@ -1,6 +1,6 @@
 .theme-toggle {
   position: fixed;
-  top: 10px; /* Ustawia odległość od góry ekranu */
+  top: 10px;
   right: 20px; 
   display: flex;
   align-items: center;
