--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,7 @@
     --icon-bg: #f4e2bf;
     --icon-color: #b16f24;
     --accent-color: #c18244;
+    --tag-color: #c18244;
     --button-bg: #c18244;
     --button-text: #ffffff;
     --footer-bg: #433c38;
@@ -27,6 +28,7 @@
     --icon-bg: #1e1b16;
     --icon-color: #d6a456;
     --accent-color: #c18244;
+    --tag-color: #e6e2d9;
     --button-bg: #925f2b;
     --button-text: #e6e2d9;
     --footer-bg: #1a1813;
