--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -84,7 +84,6 @@
   opacity: 0.75;
 }
 
-/* Medium devices (tablets and up) */
 @media (min-width: 768px) {
   .hero {
     padding: 6rem 2rem;
@@ -96,17 +95,21 @@
   }
   
   .profile-container {
-    width: 40%;
+    width: 20%;
     margin-bottom: 0;
   }
   
   .profile-image-container {
-    width: 16rem;
-    height: 16rem;
+    width: 100%;
+    height: 100%;
+    min-width: 12rem;
+    min-height: 12rem;
+    aspect-ratio: 1;
+    position: relative;
   }
   
   .hero-details {
-    width: 60%;
+    width: 80%;
     text-align: left;
     padding-left: 3rem;
   }
